--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@
 build/
 
 # IntelliJ IDEA
-
-# User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
@@ -13,3 +11,7 @@ build/
 .idea/**/modules/xml
 .idea/**/gradle.xml
 *.iml
+
+# Local
+/tmp/
+/config.properties
