--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,6 @@
 plugins {
     id 'java'
     id 'application'
-//     id "org.springframework.boot" version "2.4.1"
-//     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-//     id 'war'
 }
 
 repositories {
@@ -12,15 +9,17 @@ repositories {
 }
 
 dependencies {
-    def geotools_version = '24.1'
-
     // PostgreSQL
     implementation 'org.postgresql:postgresql:42.2.18'
     // Command line arguments
     implementation 'info.picocli:picocli:4.6.1'
     annotationProcessor 'info.picocli:picocli-codegen:4.6.1'
 
+    // Jetbrains annotations
+    compileOnly 'org.jetbrains:annotations:16.0.2'
+
 //     // Geotools
+//     def geotools_version = '24.1'
 //     implementation "org.geotools:gt-main:${geotools_version}"
 //     implementation "org.geotools:gt-netcdf:${geotools_version}"
 
@@ -45,9 +44,3 @@ jar {
         attributes 'Main-Class': 'fr.nantral.mint.App'
     }
 }
-
-// This was a Spring framework fix
-// // Fix <http://www.slf4j.org/codes.html#log4jDelegationLoop>
-// configurations {
-//     compile.exclude module: 'log4j-over-slf4j'
-// }
