--- a/config.properties.template
+++ b/config.properties.template
@@ -1,7 +1,9 @@
+# Database settings
 database_url = jdbc:postgresql://DB_HOST:DB_PORT/DB_NAME
 username = YOUR_USERNAME
 password = YOUR_PASSWORD
 #table_name = conc_raster
 
-model_sh = model.sh
-model_dir = /path/to/model
+# Model settings
+model_sh = /path/to/captation/model.sh
+sirane_dir = /path/to/captation/sirane
